[package]
name = "simple-tqdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rayon = ["dep:rayon", "indicatif/rayon"]

[[example]]
name = "rayon"
required-features = ["rayon"]

[dependencies]
indicatif = { version = "0.17.7" }
rayon = { version = "1.8.0", optional = true }
