[package]
name = "simple-tqdm"
version = "0.1.4"
edition = "2021"
description = "A simple progress bar library much like python's tqdm"
keywords = ["cli", "progress", "pb", "progressbar", "tqdm"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/Icerath/simple-tqdm/"
readme = "README.md"
exclude = ["screenshots/*"]

[features]
rayon = ["dep:rayon", "indicatif/rayon"]

[[example]]
name = "rayon"
required-features = ["rayon"]

[dependencies]
indicatif = { version = "0.17.7" }
rayon = { version = "1.8.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
